# project-secitec

./: db.sqbpro  pyproject.toml
accounts/: urls.py  views.py
called/: .admin.py.kate-swp  admin.py  apps.py  models.py  urls.py  views.py
called/migrations/: 0005_alter_call_status.py  0005_call_date_alter_call_status.py  0006_rename_date_call_date_start_call_date_end.py  0007_tecnico.py  0008_tecnico_called.py  0009_alter_tecnico_called.py  0010_alter_tecnico_called.py  0011_alter_tecnico_called.py  0012_alter_tecnico_called.py  0013_call_solution.py
core/: README.md  settings.py  urls.py
core/called/: admin.py  models.py  urls.py  views.py
core/called/migrations/: 0001_initial.py  0002_call.py  0003_rename_secretária_setor_call_secretary_sector.py  0004_call_status_alter_secretary_name.py
core/called/templates/: base.html
core/called/templates/called/: create.html  detail.html  index.html  list.html  not_found.html  query.html  success.html
core/core/: settings.py  urls.py
core/core/templates/: base.html
core/core/templates/core/: index.html
core/static/css/: create.css  query.css  style.css
core/static/css_/: style.css
core/templates/: base.html
core/templates/called/: index.html  list.html
static/css/: style.css
templates/: base.html
templates/called/: close.html  create.html  detail.html  information.html  list.html  success.html
templates/core/: index.html
templates/registration/: login.html  register.html
tests/: test_project_secitec.py
